# cppWebsocket

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TODO.md
.github/workflows/: ci-docker.yml
cppWebsocket/inc/overHere/net/ws/: error.hpp
cppWebsocket/inc/overHere/net/ws/helpers/: promise.hpp
cppWebsocket/inc/overHere/net/ws/ws/: endpoint.hpp  endpoint_pool.hpp  metadata.hpp
cppWebsocket/src/helpers/: promise.cpp
cppWebsocket/src/ws/: endpoint.cpp  endpoint_pool.cpp  metadata.cpp
documentation/: cppWebsocket.md  multithreading.md  simple.md
examples/: endpoint_pool.cpp  multithreading.cpp  simple.cpp
examples/helpers/: thread_logger.hpp
